[project]
name = "bookbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Bhavin",email = "bhavin137@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stats (>=0.1.2a0,<0.2.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
